fixed terminal overflow error on firefox

--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -31,6 +31,7 @@
 
 .terminal-prompt{
     margin-right: 4px;
+    min-width: fit-content;
 }
 
 .terminal-user{
